AnalyticReports - добавлен новый виджет по упрвалению таблицами и чартами

--- a/public/scripts/Smart/FilterEditor/widget/templates/FilterEditor.html
+++ b/public/scripts/Smart/FilterEditor/widget/templates/FilterEditor.html
@@ -7,11 +7,11 @@
         </li>
         <li>
             <div class="controller-tree-${name}">
-                <ol id="controller-tree-icons-container-${name}" class="controller-tree-list" data-dojo-attach-point="controlPanelNode"></ol>
+                <ol class="controller-tree-list" data-dojo-attach-point="controlPanelNode"></ol>
             </div>
         </li>
         <li>
-            <div id="filters-${name}" data-dojo-attach-point="filterTreeNode"></div>
+            <div id="filters-${id}" data-dojo-attach-point="filterTreeNode"></div>
         </li>
     </ul>
 </div>
