--- a/public/scripts/Smart/FilterControlPanel/widget/templates/FilterControlPanel.html
+++ b/public/scripts/Smart/FilterControlPanel/widget/templates/FilterControlPanel.html
@@ -3,10 +3,13 @@
     <div class="col-sm-5 col-sm-offset-1 col-md-6 col-md-offset-1">
         <h3> Список фильтров </h3>
         <div>
-            <button class="btn" id="newFilterBtn-${name}" data-dojo-attach-point="newFilterBtnNode" ></button>
-            <button class="btn" id="removeFilterBtn-${name}" data-dojo-attach-point="removeFilterBtnNode" ></button>
+            <!--<button class="btn" id="newFilterBtn-${name}" data-dojo-attach-point="newFilterBtnNode" ></button>
+            <button class="btn" id="removeFilterBtn-${name}" data-dojo-attach-point="removeFilterBtnNode" ></button>-->
+            <button class="btn" data-dojo-attach-point="newFilterBtnNode" ></button>
+            <button class="btn" data-dojo-attach-point="removeFilterBtnNode" ></button>
             <button class="btn" data-dojo-attach-point="setFilterBtnNode">Применить фильтр к таблице</button>
+            <!--<button class="btn" data-dojo-attach-point="setFilterToStoreBtnNode">Применить фильтр к хранилищу</button>-->
         </div>
-        <div id="filter-list-grid-${name}" data-dojo-attach-point="filterListGridNode"></div>
+        <div data-dojo-attach-point="filterListGridNode"></div>
     </div>
 </div>
